[project]
name = "rag-improve-ragas"
version = "0.1.0"
description = "Educational project: Naive RAG with RAGAS evaluation"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "langchain>=0.3.0",
    "langchain-openai>=0.2.0",
    "langchain-community>=0.3.0",
    "langchain-text-splitters>=0.3.0",
    "langchain-ollama>=0.3.0",
    "langchain-huggingface>=0.1.0",
    "pypdf>=4.0.0",
    "faiss-cpu>=1.7.4",
    "ragas>=0.2.0",
    "pandas>=2.0.0",
    "datasets>=2.0.0",
    "python-dotenv>=1.0.0",
    "numpy>=1.24.0",
    "httpx>=0.27.0",
    "langchain-qdrant>=0.2.0",
    "qdrant-client>=1.7.0",
    "sentence-transformers>=2.2.0",
]

[dependency-groups]
dev = [
    "jupyter>=1.0.0",
    "matplotlib>=3.7.0",
]
